feat(frontend): enable PWA for frontend ss-68

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="stylesheet" href="./src/assets/css/styles.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>SmartScapes</title>
+		<meta
+			name="description"
+			content="SmartScapes - Interactive mapping platform for exploring large, complex areas"
+		/>
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
+		<meta name="theme-color" content="#ffffff" />
+		<link rel="stylesheet" href="./src/assets/css/styles.css" />
 	</head>
 	<body>
 		<div id="root"></div>
