--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -7,6 +7,13 @@
 		<link rel="stylesheet" href="./src/assets/css/styles.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>SmartScapes</title>
+		<meta
+			name="description"
+			content="SmartScapes - Interactive mapping platform for exploring large, complex areas"
+		/>
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="theme-color" content="#ffffff" />
+		<link rel="stylesheet" href="./src/assets/css/styles.css" />
 	</head>
 	<body>
 		<div id="root"></div>
